# karelics_vesc_can_driver

./: CMakeLists.txt  Readme.md  index.rst  package.xml  setup.cfg  setup.py
doc/: conf.py  index.rst  installation.rst  manifest.yaml  messages.rst  modules.rst
doc/html/: .buildinfo  genindex.html  index-msg.html  index.html  installation.html  messages.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  vesc_can_driver.html
doc/html/.doctrees/: environment.pickle  index.doctree  installation.doctree  messages.doctree  modules.doctree  vesc_can_driver.doctree
doc/html/_modules/: index.html  vesc.html
doc/html/_sources/: vesc_can_driver.rst.txt
doc/html/msg/: VescStatus.html
include/karelics_vesc_can_driver/: battery_status.py  max_current_monitor.py  vesc.py  vesc_messages.py
install/: local_setup.sh  setup.sh
install/karelics_vesc_can_driver/include/karelics_vesc_can_driver/msg/detail/: vesc_status__builder.hpp  vesc_status__functions.c  vesc_status__functions.h  vesc_status__rosidl_typesupport_introspection_cpp.hpp  vesc_status__struct.hpp  vesc_status__traits.hpp  vesc_status__type_support.c  vesc_status__type_support.h
install/karelics_vesc_can_driver/share/ament_index/resource_index/rosidl_interfaces/: karelics_vesc_can_driver
install/karelics_vesc_can_driver/share/karelics_vesc_can_driver/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/karelics_vesc_can_driver/share/karelics_vesc_can_driver/cmake/: ament_cmake_export_dependencies-extras.cmake  karelics_vesc_can_driver__rosidl_generator_cppExport.cmake  karelics_vesc_can_driver__rosidl_typesupport_cExport-noconfig.cmake  karelics_vesc_can_driver__rosidl_typesupport_cExport.cmake  karelics_vesc_can_driver__rosidl_typesupport_cppExport.cmake  karelics_vesc_can_driver__rosidl_typesupport_introspection_cExport-noconfig.cmake  karelics_vesc_can_driver__rosidl_typesupport_introspection_cExport.cmake  karelics_vesc_can_driver__rosidl_typesupport_introspection_cppExport-noconfig.cmake  karelics_vesc_can_driver__rosidl_typesupport_introspection_cppExport.cmake
install/karelics_vesc_can_driver/share/karelics_vesc_can_driver/msg/: VescStatus.idl
karelics_vesc_can_driver/: battery_status.py  battery_status_base.py  max_current_monitor.py  utils.py  vesc.py  vesc_can_driver.py  vesc_messages.py
launch/: hardware_interface.launch  karelics_vesc_can_driver.launch.py
log/: latest_build
msg/: VescStatus.msg  VescStatus2.msg  VescStatus3.msg  VescStatus4.msg  VescStatus5.msg
scripts/: setup_can_interface.bash
src/: vesc_can_driver.py
test/: CMakeLists.txt
tests/: test_battery_status_base.py
